--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<ejs lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Home Page</title>
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <link rel="stylesheet" href="/CSS/style.css" type="text/css">
 </head>
 <body>
   <header class="header">
@@ -30,4 +30,4 @@
     <p>&copy; 2025 Express App | All rights reserved.</p>
   </footer>
 </body>
-</html>
+</ejs>
