--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<ejs lang="en">
+
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,4 +30,4 @@
     <p>&copy; 2025 Express App | All rights reserved.</p>
   </footer>
 </body>
-</ejs>
+</html>
