--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Home Page</title>
-  <link rel="stylesheet" href="/style.css" >
+  <link rel="stylesheet" href="/asset/style.css" >
+  <link rel="icon" type="image/x-icon" href="/asset/favicon.ico">
 </head>
 <body>
   <header class="header">
     <h1>Welcome to Express</h1>
     <p>Building dynamic web applications made simple!</p>
-    <button class="cta-button" onclick="alert('Welcome to our site!')">Click Me</button>
+   
   </header>
   <section class="features">
     <div class="feature-card">
